--- a/index.html
+++ b/index.html
@@ -10,35 +10,38 @@
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#introduction">Introduction</a>
-        <a href="#hobby">Hobby</a>
+        <a href="#hobbies">Hobbies</a>
         <a href="#nology">Nology</a>
         <a href="#contacts">Contact Details</a>
     </div>
 
     <header>
-        <h1>This is ME!</h1>
+        <h1>Hello everyone!</h1>
     </header>
 
     <main>
         <section id="introduction">
             <h2>Introduction</h2>
-            <p>My name is Anna Tankovics. Before Nology, I studied International Business Management at King's College London.</p>
+            <p>My name is Anna. Before Nology, I studied International Business Management at King's College London.</p>
         </section>
 
-        <section id="hobby">
-            <h2>Hobby</h2>
-            <p>One of my favourite hobbies is playing basketball</p>
+        <section id="hobbies">
+            <h2>Hobbies</h2>
+            <p>One of my favourite hobbies is playing basketball:</p>
             <img src="Basketball.jpg" alt="A picture of basketball">
+            <p>Another one is hiking:</p>
+            <img src="Hiking.jpg" alt="A picture of people hiking">
         </section>
 
         <section id="nology">
             <h2>Nology</h2>
-            <p>Now I am doing a Tech Analyst course with Nology!</p>
+            <p>Now I am doing a Tech Analyst course with Nology! Here is their website: <a href="https://nology.io/" target="blank">nology.io</a></p></p>
         </section>
 
         <section id="contacts">
             <h2>Contact Details</h2>
-            <p>My number is 07871108064.</p>
+            <p>Phone number: 07871107051</p>
+            <p>Email address: 12345670@gmail.com</p>
         </section>
 
 
